Add homework to mnemonic lessons
